--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>My Website</title>
+    <title>My First HTML Page</title>
 </head>
 <body>
-  <h1>Welcome to My Website!</h1>
+    <h1>This is a heading</h1>
+    <p>This is a paragraph.</p>
 </body>
 </html>
